# KubeMind

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  go.mod  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: TECH-STACK.md  VISION.md
docs/rfc/: README.md  RFC-000-kubemind-architecture.md  RFC-001-1-natural-language-interface.md  RFC-001-2-governance-policy-declaration.md  RFC-001-3-observability-dashboard.md  RFC-001-human-machine-interface.md  RFC-002-1-agent-coordinator.md  RFC-002-2-cluster-planner-agent.md  RFC-002-3-scheduler-governor-agent.md  RFC-002-4-resource-governor-agent.md  RFC-002-5-network-governor-agent.md  RFC-002-6-storage-governor-agent.md  RFC-002-7-security-governor-agent.md  RFC-002-8-fault-healer-agent.md  RFC-002-9-multi-cluster-agent.md  RFC-002-agent-orchestration-brain.md  RFC-003-1-k8s-best-practices-rag.md  RFC-003-2-cluster-state-knowledge-graph.md  RFC-003-3-historical-decision-database.md  RFC-003-knowledge-base.md  RFC-004-execution-observation.md  RFC-005-system-intent-declaration.md  RFC-006-knowledge-injection-interface.md  RFC-007-universal-intent-translator.md
