[project]
name = "kubemind"
version = "0.1.0"
description = "AI-powered Kubernetes cluster governance system"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "KubeMind Team", email = "hello@kubemind.ai"}
]
keywords = ["kubernetes", "ai", "governance", "langchain", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.11 only",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "langchain==0.1.20",
    "langchain-core==0.1.52",
    "langchain-community==0.0.24",
    "langgraph==0.0.55",
    "langchain-openai==0.1.22",
    "langchain-anthropic==0.1.22",
    "llama-index-core==0.10.55",
    "llama-index-readers-file==0.1.29",
    "llama-index-vector-stores-chroma==0.1.11",
    "llama-index-vector-stores-weaviate==0.2.3",
    "llama-index-embeddings-openai==0.1.11",
    "llama-index-llms-openai==0.1.27",
    "chromadb==0.5.3",
    "neo4j==5.20.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.3",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.9",
    "websockets==12.0",
    "kubernetes==29.0.0",
    "aiokafka==0.9.0",
    "redis==5.0.4",
    "psycopg[binary]==3.1.19",
    "sqlalchemy==2.0.30",
]

[project.optional-dependencies]
ml = [
    "torch==2.3.0",
    "tensorflow==2.16.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "stable-baselines3==2.3.0",
    "gymnasium==0.29.1",
    "prophet==1.1.5",
    "deap==1.4.1",
]

dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "ruff==0.4.3",
    "mypy==1.10.0",
    "black==24.4.2",
    "pre-commit==3.7.0",
]

[project.scripts]
kubemind-api = "pkg.dashboard.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkg*"]
namespaces = false

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["pkg"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "llama_index.*",
    "chromadb.*",
    "neo4j.*",
    "kubernetes.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
addopts = "-v --cov=pkg --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py311"]